crates/storage/libmdbx-rs/mdbx-sys/src/bindings.rs

    pub fn mdbx_cursor_get_batch(
        cursor: *mut MDBX_cursor,
        count: *mut usize,
        pairs: *mut MDBX_val,
        limit: usize,
        op: MDBX_cursor_op,
    ) -> ::std::os::raw::c_int;
    pub fn mdbx_cursor_put(
        cursor: *mut MDBX_cursor,
        key: *const MDBX_val,
        data: *mut MDBX_val,
        flags: MDBX_put_flags_t,
    ) -> ::std::os::raw::c_int;
    pub fn mdbx_cursor_del(
        cursor: *mut MDBX_cursor,
        flags: MDBX_put_flags_t,
    ) -> ::std::os::raw::c_int;
    pub fn mdbx_cursor_count(
        cursor: *const MDBX_cursor,
        pcount: *mut usize,
    ) -> ::std::os::raw::c_int;
    pub fn mdbx_cursor_eof(cursor: *const MDBX_cursor) -> ::std::os::raw::c_int;
    pub fn mdbx_cursor_on_first(cursor: *const MDBX_cursor) -> ::std::os::raw::c_int;
    pub fn mdbx_cursor_on_last(cursor: *const MDBX_cursor) -> ::std::os::raw::c_int;
    pub fn mdbx_estimate_distance(
        first: *const MDBX_cursor,
        last: *const MDBX_cursor,
        distance_items: *mut isize,
    ) -> ::std::os::raw::c_int;
    pub fn mdbx_estimate_move(
        cursor: *const MDBX_cursor,
        key: *mut MDBX_val,
        data: *mut MDBX_val,
        move_op: MDBX_cursor_op,
        distance_items: *mut isize,
    ) -> ::std::os::raw::c_int;
    pub fn mdbx_estimate_range(
        txn: *const MDBX_txn,
        dbi: MDBX_dbi,
        begin_key: *const MDBX_val,
        begin_data: *const MDBX_val,
        end_key: *const MDBX_val,
        end_data: *const MDBX_val,
        distance_items: *mut isize,
    ) -> ::std::os::raw::c_int;
    pub fn mdbx_is_dirty(
        txn: *const MDBX_txn,
        ptr: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
    pub fn mdbx_dbi_sequence(
        txn: *mut MDBX_txn,
        dbi: MDBX_dbi,
        result: *mut u64,
        increment: u64,
    ) -> ::std::os::raw::c_int;
    pub fn mdbx_cmp(
        txn: *const MDBX_txn,
        dbi: MDBX_dbi,
        a: *const MDBX_val,
        b: *const MDBX_val,
    ) -> ::std::os::raw::c_int;
    pub fn mdbx_get_keycmp(flags: MDBX_db_flags_t) -> MDBX_cmp_func;
    pub fn mdbx_dcmp(
        txn: *const MDBX_txn,
        dbi: MDBX_dbi,
        a: *const MDBX_val,
        b: *const MDBX_val,
    ) -> ::std::os::raw::c_int;
    pub fn mdbx_get_datacmp(flags: MDBX_db_flags_t) -> MDBX_cmp_func;
    pub fn mdbx_reader_list(
        env: *const MDBX_env,
        func: MDBX_reader_list_func,
        ctx: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
    pub fn mdbx_reader_check(
        env: *mut MDBX_env,
        dead: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
    pub fn mdbx_txn_straggler(
        txn: *const MDBX_txn,
        percent: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
    pub fn mdbx_thread_register(env: *const MDBX_env) -> ::std::os::raw::c_int;
    pub fn mdbx_thread_unregister(env: *const MDBX_env) -> ::std::os::raw::c_int;
    pub fn mdbx_env_set_hsr(
        env: *mut MDBX_env,
        hsr_callback: MDBX_hsr_func,
    ) -> ::std::os::raw::c_int;
    pub fn mdbx_env_get_hsr(env: *const MDBX_env) -> MDBX_hsr_func;
    pub fn mdbx_env_pgwalk(
        txn: *mut MDBX_txn,
        visitor: MDBX_pgvisitor_func,
        ctx: *mut ::std::os::raw::c_void,
        dont_check_keys_ordering: bool,
    ) -> ::std::os::raw::c_int;
    pub fn mdbx_env_open_for_recovery(
        env: *mut MDBX_env,
        pathname: *const ::std::os::raw::c_char,
        target_meta: ::std::os::raw::c_uint,
        writeable: bool,
    ) -> ::std::os::raw::c_int;
    pub fn mdbx_env_turn_for_recovery(
        env: *mut MDBX_env,
        target_meta: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
